core/tests/ui/store/multiple_id_fields.rs
use appdb::{Id, Store};
use serde::{Deserialize, Serialize};
use surrealdb::types::SurrealValue;

#[derive(Debug, Clone, Serialize, Deserialize, SurrealValue, Store)]
struct BadStore {
    id: Id,
    owner_id: Id,
}

fn main() {}
